[workspace]
members = [
    "raylib",
    "impl"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Siddharth Kumar Jha <siddharth.k.jha@proton.me>"]

[profile.dev]
panic = "abort"
lto = true
opt-level = "z"
debug = true

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
debug = true
codegen-units = 1
